Renaming branch for API and developer content

--- a/Content_Portal/toc.yml
+++ b/Content_Portal/toc.yml
@@ -9,5 +9,8 @@
 - name: API Reference
   href: Documentation/toc.yml
   topicHref: Documentation/OSIsoft_Cloud_Services.md
+- name: Developer guide
+  href: developer-guide/toc.yml
+  topicHref: developer-guide/introduction.md
 - name: Concepts
   href: Concepts/toc.yml
